# domain-guard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish.yml
demo/: .env.example  README.md  run.sh
demo/data/: conversations.json  orders.json  shipments.json
demo/guards/: shop-support.yaml
demo/shop_agent/: __init__.py  agent.py  providers.py  server.py  tools.py  tracker.py  ui.html
demo/tests/: __init__.py  test_demo.py  test_friendly.py
docs/: ai-dev.md  dev.md  user-guide.md
domain_guard/: __init__.py  admin.html  auth.py  cache.py  calibrate.py  cli.py  config.py  context.py  core.py  decision_log.py  metrics.py  ratelimit.py  replay.py  router.py  sidecar.py
domain_guard/layers/: __init__.py  base.py  context_bypass.py  embedding.py  llm_fallback.py  rule.py
domain_guard/providers/: __init__.py  embedding_local.py  llm_claude.py
examples/: coding-assistant.yaml  customer-support.yaml  finsense_gateway.py  forecast-agent-old.yaml  forecast-agent.yaml  hr-agent.yaml  it-ticket.yaml  run_demo.py
examples/samples/: in_domain.jsonl  out_of_domain.jsonl  traffic.jsonl
tests/: conftest.py
tests/integration/: test_auth.py  test_e2e.py  test_sidecar.py
tests/unit/: test_auth.py  test_cache.py  test_config.py  test_core.py  test_decision_log.py  test_examples.py  test_metrics.py  test_ratelimit.py  test_replay.py  test_router.py
